pull from correct branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
             cd /tmp/devops-app
 
-            git pull origin main
+            git pull origin master
 
             echo "Deploying app..."
             sudo cp /tmp/devops-app/index.html /var/www/html/index.html
