fix codeQL language

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: html 
+          languages: javascript 
 
       # Runs the actual analysis
       - name: Perform CodeQL Analysis
