--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,21 @@ jobs:
       # Runs the actual analysis
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+      
+      # Scan for hardcoded secrets
+      - name: Perform Secret Scan
+        uses: gitleaks/gitleaks-action@v2
+        with:
+          # This tells Gitleaks to output its findings in a format
+          # that GitHub can display on the security tab.
+          report_format: sarif
+          report_path: gitleaks-report.sarif
+
+      # This step uploads the Gitleaks report so you can see it
+      - name: Upload Gitleaks report
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: gitleaks-report.sarif
 
   deploy:
     needs: build
